fixing the navbar visibilty issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ section.your-active-class span {
         rgba(0, 0, 0, 0.1) 0%,
         rgba(0, 0, 0, 0) 100%
     );
-    background-color: #e0e0e0;
+    background-color: rgb(37, 36, 36);
 }
 
 section.your-active-class .landing__container::before {
@@ -244,8 +244,11 @@ section.your-active-class .landing__container::after {
         margin-right: 2.9em;
         margin-left: 2.9em;
         height: 100px;
-        overflow-y: auto;
         font-size: 10px;
+        /* max-height: 200px; */
+    }
+    li{
+        display: inline;
     }
 
     ul {
@@ -253,7 +256,9 @@ section.your-active-class .landing__container::after {
         margin: 0;
         padding: 0;
         width: 100px;
-        background-color: #f1f1f1;
+        overflow-y: auto;
+        max-height: 200px;
+        background-color: rgba(255, 0, 0, 0.2);
         /* height: 100px; */
     }
 
@@ -270,6 +275,9 @@ section.your-active-class .landing__container::after {
         background-color: #555;
         color: white;
         box-sizing: border-box;
+    }
+    main{
+        margin-top: 200px;
     }
 
     /* nav {
